--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   },
   "dependencies": {
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "vite": "^2.0.5"
+    "tailwindcss": "^2.0.3",
+    "twin.macro": "^2.3.0",
+    "vite": "^2.0.5",
+    "vite-plugin-babel-macros": "^1.0.5"
   }
 }
